# QLoop-dev

./: .gitignore  Makefile  QPprep.c  README.md  adaboost.h  adaboost_old.h  all.sh  chrom.c  cmd_args.h  constant.h  ctcf_match.py  diffSec.h  fasta.h  filename.h  hic.h  hist.sh  hist_sub  histo.R  histo.sh  interval2mask.pl  interval2mask.sh  io.h  io_HiC.h  io_freq.h  io_kmerFreq.h  kmer.h  kmerFreqOdds.c  kmerPairBoost.c  kmerPairPlot.R  kmerPairPlot.sh  kmer_filter.c  kmer_filter.sh  main.c  main.sh  mkLibsvmFile.c  mywc.h  patch_v0.24.sh  patch_v0.25.sh  pipeline.sh  plots.R  (+9 more)
old/: LICENSE  README.md  ctcf_match.py  kmer_filter.c  kmer_filter.sh  pred.c  scatter_plot.sh
old/src/: adaboost.h  canonical_kmer_pair.py  cmd_args.h  diffSec.h  fasta.h  hic.h  hic_prep.py  kmer.h  l2boost.h  make_circos.sh  parse-table.conf  pred.h  res_dump.py  ticks.conf
src/: CMakeLists.txt  adaboost.h  canonical_kmer_pair.py  canonical_kmer_pair.sh  circos.conf  cmd_args.h  fasta.h  hic.h  hic_prep.py  hic_prep.sh  ideogram.conf  kmer.h  l2boost.h  make_circos.sh  merged_res_to_matrix.py  mywc.h  plt_res.py  pred.h  res_to_merged.py  scatter_plot.py
src/main/: CMakeLists.txt  config.h.in  main.cpp
